--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -43,7 +43,7 @@
 .footer-logo {
   width: 220px;
   height: auto;
-  margin: -30px 0 -20px -12px;
+  margin: -30px 0 16px -12px;
   display: block;
   object-fit: contain;
 }
